@@ -16,6 +16,7 @@ Version 1.0.8.6
   -  Added language files
      * Clojure (Jess Johnson)
      * F# (Julien Ortin)
+     * GAMBAS (Jesus Guardon)
      * Logtalk (Paulo Moura)
      * NewLisp (cormullion)
      * SystemVerilog (Sean O'Boyle)
